# frenamer-r2plugin

./: CMakeLists.txt  README.md  core_plugin.cpp  nameGenerator.cpp
cmake/: FindRadare2.cmake
include/: nameGenerator.h
